--- a/main.ipynb
+++ b/main.ipynb
@@ -10,6 +10,24 @@
     "import numba \n",
     "import math"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "charge=[x,y,c]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X=0\n",
+    "Y=1\n",
+    "C=2"
+   ]
   }
  ],
  "metadata": {
