--- a/main.ipynb
+++ b/main.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import numba \n",
-    "import math"
+    "import math\n",
+    "import time\n",
+    "import cv2 as cv2"
    ]
   },
   {
@@ -20,13 +22,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "X=0\n",
     "Y=1\n",
-    "C=2"
+    "C=2\n",
+    "TIMESCALE=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.01 s ± 5.06 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def compute_force(c1,c2):\n",
+    "    c_dir=c1[C]*c2[C]\n",
+    "    dist=np.sqrt(np.square(c1[X]-c2[X])+np.square(c1[Y]-c2[Y]))"
    ]
   }
  ],
