--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,11 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_force(c1,c2):\n",
+    "\n",
     "    c_dir=c1[C]*c2[C]\n",
     "    dist=np.sqrt(np.square(c1[X]-c2[X])+np.square(c1[Y]-c2[Y]))\n",
     "    dir_vec=[c1[X]-c2[X],c1[Y]-c2[Y]]\n",
@@ -53,14 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.46 µs ± 30 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "3.34 µs ± 15.9 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +96,7 @@
        "       [ 1.00000000e+01,  0.00000000e+00,  1.00000000e+00]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,60 +182,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cuda Implementation"
+    "Numba Implementation(slow and wrong)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\bjste\\AppData\\Local\\Temp\\ipykernel_19444\\3423162991.py:1: NumbaWarning: \u001b[1m\n",
-      "Compilation is falling back to object mode WITHOUT looplifting enabled because Function \"compute_forces\" failed type inference due to: \u001b[1m\u001b[1mNo conversion from list(float64)<iv=None> to float64 for '$142return_value.63', defined at None\n",
-      "\u001b[1m\n",
-      "File \"C:\\Users\\bjste\\AppData\\Local\\Temp\\ipykernel_19444\\3423162991.py\", line 10:\u001b[0m\n",
-      "\u001b[1mdef compute_forces(c1,c2,x1,x2,y1,y2):\n",
-      "    <source elided>\n",
-      "    return_vec=[norm_vec[X]*return_const,norm_vec[Y]*return_const]\n",
-      "\u001b[1m    return return_vec\n",
-      "\u001b[0m    \u001b[1m^\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
-      "\u001b[0m\u001b[1mDuring: typing of assignment at C:\\Users\\bjste\\AppData\\Local\\Temp\\ipykernel_19444\\3423162991.py (10)\u001b[0m\n",
-      "\u001b[1m\n",
-      "File \"C:\\Users\\bjste\\AppData\\Local\\Temp\\ipykernel_19444\\3423162991.py\", line 10:\u001b[0m\n",
-      "\u001b[1mdef compute_forces(c1,c2,x1,x2,y1,y2):\n",
-      "    <source elided>\n",
-      "    return_vec=[norm_vec[X]*return_const,norm_vec[Y]*return_const]\n",
-      "\u001b[1m    return return_vec\n",
-      "\u001b[0m    \u001b[1m^\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
-      "  @numba.vectorize([\"float64(float64,float64,float64,float64,float64,float64)\"])\n",
-      "c:\\Users\\bjste\\.conda\\envs\\tf-gpu\\lib\\site-packages\\numba\\core\\object_mode_passes.py:151: NumbaWarning: \u001b[1mFunction \"compute_forces\" was compiled in object mode without forceobj=True.\n",
-      "\u001b[1m\n",
-      "File \"C:\\Users\\bjste\\AppData\\Local\\Temp\\ipykernel_19444\\3423162991.py\", line 2:\u001b[0m\n",
-      "\u001b[1m@numba.vectorize([\"float64(float64,float64,float64,float64,float64,float64)\"])\n",
-      "\u001b[1mdef compute_forces(c1,c2,x1,x2,y1,y2):\n",
-      "\u001b[0m\u001b[1m^\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
-      "  warnings.warn(errors.NumbaWarning(warn_msg,\n",
-      "c:\\Users\\bjste\\.conda\\envs\\tf-gpu\\lib\\site-packages\\numba\\core\\object_mode_passes.py:161: NumbaDeprecationWarning: \u001b[1m\n",
-      "Fall-back from the nopython compilation path to the object mode compilation path has been detected, this is deprecated behaviour.\n",
-      "\n",
-      "For more information visit https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit\n",
-      "\u001b[1m\n",
-      "File \"C:\\Users\\bjste\\AppData\\Local\\Temp\\ipykernel_19444\\3423162991.py\", line 2:\u001b[0m\n",
-      "\u001b[1m@numba.vectorize([\"float64(float64,float64,float64,float64,float64,float64)\"])\n",
-      "\u001b[1mdef compute_forces(c1,c2,x1,x2,y1,y2):\n",
-      "\u001b[0m\u001b[1m^\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
-      "  warnings.warn(errors.NumbaDeprecationWarning(msg,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "@numba.vectorize([\"float64(float64,float64,float64,float64,float64,float64)\"])\n",
@@ -251,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +215,7 @@
        "['dddddd->d']"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,65 +226,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bjste\\AppData\\Local\\Temp\\ipykernel_19444\\2179925088.py:1: NumbaWarning: \u001b[1m\n",
-      "Compilation is falling back to object mode WITHOUT looplifting enabled because Function \"compute_forces\" failed type inference due to: \u001b[1m\u001b[1mnon-precise type pyobject\u001b[0m\n",
-      "\u001b[0m\u001b[1mDuring: typing of argument at C:\\Users\\bjste\\AppData\\Local\\Temp\\ipykernel_19444\\2179925088.py (3)\u001b[0m\n",
-      "\u001b[1m\n",
-      "File \"C:\\Users\\bjste\\AppData\\Local\\Temp\\ipykernel_19444\\2179925088.py\", line 3:\u001b[0m\n",
-      "\u001b[1mdef compute_forces(c1,c2,x1,x2,y1,y2):\n",
-      "\u001b[1m    c_dir=c1*c2\n",
-      "\u001b[0m    \u001b[1m^\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
-      "  @numba.vectorize()#[\"float64(float64,float64,float64,float64,float64,float64)\"])\n",
-      "c:\\Users\\bjste\\.conda\\envs\\tf-gpu\\lib\\site-packages\\numba\\core\\object_mode_passes.py:151: NumbaWarning: \u001b[1mFunction \"compute_forces\" was compiled in object mode without forceobj=True.\n",
-      "\u001b[1m\n",
-      "File \"C:\\Users\\bjste\\AppData\\Local\\Temp\\ipykernel_19444\\2179925088.py\", line 2:\u001b[0m\n",
-      "\u001b[1m@numba.vectorize()#[\"float64(float64,float64,float64,float64,float64,float64)\"])\n",
-      "\u001b[1mdef compute_forces(c1,c2,x1,x2,y1,y2):\n",
-      "\u001b[0m\u001b[1m^\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
-      "  warnings.warn(errors.NumbaWarning(warn_msg,\n",
-      "c:\\Users\\bjste\\.conda\\envs\\tf-gpu\\lib\\site-packages\\numba\\core\\object_mode_passes.py:161: NumbaDeprecationWarning: \u001b[1m\n",
-      "Fall-back from the nopython compilation path to the object mode compilation path has been detected, this is deprecated behaviour.\n",
-      "\n",
-      "For more information visit https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit\n",
-      "\u001b[1m\n",
-      "File \"C:\\Users\\bjste\\AppData\\Local\\Temp\\ipykernel_19444\\2179925088.py\", line 2:\u001b[0m\n",
-      "\u001b[1m@numba.vectorize()#[\"float64(float64,float64,float64,float64,float64,float64)\"])\n",
-      "\u001b[1mdef compute_forces(c1,c2,x1,x2,y1,y2):\n",
-      "\u001b[0m\u001b[1m^\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
-      "  warnings.warn(errors.NumbaDeprecationWarning(msg,\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "return type must be specified for object mode",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [144], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mget_ipython\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_line_magic\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtimeit\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcompute_forces([0.2,1.0,0.3],[0.3,2.3,0.2],[0.2,1.0,0.3],[0.3,2.3,0.2],[0.2,1.0,0.3],[0.3,2.3,0.2])\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\bjste\\.conda\\envs\\tf-gpu\\lib\\site-packages\\IPython\\core\\interactiveshell.py:2309\u001b[0m, in \u001b[0;36mInteractiveShell.run_line_magic\u001b[1;34m(self, magic_name, line, _stack_depth)\u001b[0m\n\u001b[0;32m   2307\u001b[0m     kwargs[\u001b[39m'\u001b[39m\u001b[39mlocal_ns\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_local_scope(stack_depth)\n\u001b[0;32m   2308\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbuiltin_trap:\n\u001b[1;32m-> 2309\u001b[0m     result \u001b[39m=\u001b[39m fn(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m   2310\u001b[0m \u001b[39mreturn\u001b[39;00m result\n",
-      "File \u001b[1;32mc:\\Users\\bjste\\.conda\\envs\\tf-gpu\\lib\\site-packages\\IPython\\core\\magics\\execution.py:1162\u001b[0m, in \u001b[0;36mExecutionMagics.timeit\u001b[1;34m(self, line, cell, local_ns)\u001b[0m\n\u001b[0;32m   1160\u001b[0m \u001b[39mfor\u001b[39;00m index \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m, \u001b[39m10\u001b[39m):\n\u001b[0;32m   1161\u001b[0m     number \u001b[39m=\u001b[39m \u001b[39m10\u001b[39m \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m index\n\u001b[1;32m-> 1162\u001b[0m     time_number \u001b[39m=\u001b[39m timer\u001b[39m.\u001b[39;49mtimeit(number)\n\u001b[0;32m   1163\u001b[0m     \u001b[39mif\u001b[39;00m time_number \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0.2\u001b[39m:\n\u001b[0;32m   1164\u001b[0m         \u001b[39mbreak\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\bjste\\.conda\\envs\\tf-gpu\\lib\\site-packages\\IPython\\core\\magics\\execution.py:156\u001b[0m, in \u001b[0;36mTimer.timeit\u001b[1;34m(self, number)\u001b[0m\n\u001b[0;32m    154\u001b[0m gc\u001b[39m.\u001b[39mdisable()\n\u001b[0;32m    155\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 156\u001b[0m     timing \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49minner(it, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtimer)\n\u001b[0;32m    157\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m    158\u001b[0m     \u001b[39mif\u001b[39;00m gcold:\n",
-      "File \u001b[1;32m<magic-timeit>:1\u001b[0m, in \u001b[0;36minner\u001b[1;34m(_it, _timer)\u001b[0m\n",
-      "File \u001b[1;32mc:\\Users\\bjste\\.conda\\envs\\tf-gpu\\lib\\site-packages\\numba\\np\\ufunc\\dufunc.py:202\u001b[0m, in \u001b[0;36mDUFunc._compile_for_args\u001b[1;34m(self, *args, **kws)\u001b[0m\n\u001b[0;32m    200\u001b[0m         argty \u001b[39m=\u001b[39m numpy_support\u001b[39m.\u001b[39mmap_arrayscalar_type(arg)\n\u001b[0;32m    201\u001b[0m     argtys\u001b[39m.\u001b[39mappend(argty)\n\u001b[1;32m--> 202\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_compile_for_argtys(\u001b[39mtuple\u001b[39;49m(argtys))\n",
-      "File \u001b[1;32mc:\\Users\\bjste\\.conda\\envs\\tf-gpu\\lib\\site-packages\\numba\\np\\ufunc\\dufunc.py:221\u001b[0m, in \u001b[0;36mDUFunc._compile_for_argtys\u001b[1;34m(self, argtys, return_type)\u001b[0m\n\u001b[0;32m    218\u001b[0m     sig \u001b[39m=\u001b[39m return_type(\u001b[39m*\u001b[39margtys)\n\u001b[0;32m    219\u001b[0m cres, argtys, return_type \u001b[39m=\u001b[39m ufuncbuilder\u001b[39m.\u001b[39m_compile_element_wise_function(\n\u001b[0;32m    220\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_dispatcher, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtargetoptions, sig)\n\u001b[1;32m--> 221\u001b[0m actual_sig \u001b[39m=\u001b[39m ufuncbuilder\u001b[39m.\u001b[39;49m_finalize_ufunc_signature(\n\u001b[0;32m    222\u001b[0m     cres, argtys, return_type)\n\u001b[0;32m    223\u001b[0m dtypenums, ptr, env \u001b[39m=\u001b[39m ufuncbuilder\u001b[39m.\u001b[39m_build_element_wise_ufunc_wrapper(\n\u001b[0;32m    224\u001b[0m     cres, actual_sig)\n\u001b[0;32m    225\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_add_loop(\u001b[39mint\u001b[39m(ptr), dtypenums)\n",
-      "File \u001b[1;32mc:\\Users\\bjste\\.conda\\envs\\tf-gpu\\lib\\site-packages\\numba\\np\\ufunc\\ufuncbuilder.py:186\u001b[0m, in \u001b[0;36m_finalize_ufunc_signature\u001b[1;34m(cres, args, return_type)\u001b[0m\n\u001b[0;32m    183\u001b[0m \u001b[39mif\u001b[39;00m return_type \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    184\u001b[0m     \u001b[39mif\u001b[39;00m cres\u001b[39m.\u001b[39mobjectmode:\n\u001b[0;32m    185\u001b[0m         \u001b[39m# Object mode is used and return type is not specified\u001b[39;00m\n\u001b[1;32m--> 186\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mreturn type must be specified for object mode\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    187\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    188\u001b[0m         return_type \u001b[39m=\u001b[39m cres\u001b[39m.\u001b[39msignature\u001b[39m.\u001b[39mreturn_type\n",
-      "\u001b[1;31mTypeError\u001b[0m: return type must be specified for object mode"
+      "22.9 ms ± 435 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit compute_forces([0.2,1.0,0.3],[0.3,2.3,0.2],[0.2,1.0,0.3],[0.3,2.3,0.2],[0.2,1.0,0.3],[0.3,2.3,0.2])"
+    "test=np.random.random((6,100000))\n",
+    "\n",
+    "\n",
+    "%timeit compute_forces(*test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Numba (fast)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numba import float64\n",
+    "@numba.guvectorize([(float64[:],float64[:],float64[:])], '(n),(n)->(n)')\n",
+    "def compute_force_guv(c1,c2,res):\n",
+    "    c_dir=c1[C]*c2[C]\n",
+    "    dist=((c1[X]-c2[X])**2+(c1[Y]-c2[Y])**2)**.5\n",
+    "    dir_vec=[c1[X]-c2[X],c1[Y]-c2[Y]]\n",
+    "    dir_len=dist\n",
+    "    norm_vec=[dir_vec[X]/dir_len,dir_vec[Y]/dir_len]\n",
+    "    return_const=(1/(4*math.pi*(dist**2)*E0))*TIMESCALE*c_dir\n",
+    "    res=[norm_vec[X]*return_const,norm_vec[Y]*return_const]\n",
+    "    print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test=np.random.random((3,2,100))\n",
+    "\n",
+    "\n",
+    "%timeit compute_force_guv(*test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "compute_force_guv: Output operand 0 has a mismatch in its core dimension 0, with gufunc signature (n),(n)->(n) (size 2 is different from 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [147], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m test2\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39marray([[[\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m],[\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m]]],dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfloat64\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m res\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mzeros((\u001b[38;5;241m2\u001b[39m))\n\u001b[1;32m----> 3\u001b[0m \u001b[43mcompute_force_guv\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mres\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\bjste\\.conda\\envs\\tf-gpu\\lib\\site-packages\\numba\\np\\ufunc\\gufunc.py:170\u001b[0m, in \u001b[0;36mGUFunc.__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    166\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__call__\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m    167\u001b[0m     \u001b[39m# If compilation is disabled OR it is NOT a dynamic gufunc\u001b[39;00m\n\u001b[0;32m    168\u001b[0m     \u001b[39m# call the underlying gufunc\u001b[39;00m\n\u001b[0;32m    169\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_frozen \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mis_dynamic:\n\u001b[1;32m--> 170\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mufunc(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    171\u001b[0m     \u001b[39melif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mout\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m kwargs:\n\u001b[0;32m    172\u001b[0m         \u001b[39m# If \"out\" argument is supplied\u001b[39;00m\n\u001b[0;32m    173\u001b[0m         args \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m (kwargs\u001b[39m.\u001b[39mpop(\u001b[39m\"\u001b[39m\u001b[39mout\u001b[39m\u001b[39m\"\u001b[39m),)\n",
+      "\u001b[1;31mValueError\u001b[0m: compute_force_guv: Output operand 0 has a mismatch in its core dimension 0, with gufunc signature (n),(n)->(n) (size 2 is different from 3)"
+     ]
+    }
+   ],
+   "source": [
+    "test2=np.array([[[1,1,1],[2,2,2]]],dtype=\"float64\")\n",
+    "res=np.zeros((2))\n",
+    "compute_force_guv([1,1,1],[2,2,2],res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<numba.np.ufunc.ufuncbuilder.GUFuncBuilder at 0x2508298a6d0>"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stationary_charges=[]\n"
    ]
   }
  ],
