gufunc output fixed

--- a/main.ipynb
+++ b/main.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,14 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.34 µs ± 15.9 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "3.67 µs ± 92.3 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "       [ 1.00000000e+01,  0.00000000e+00,  1.00000000e+00]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "['dddddd->d']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,14 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22.9 ms ± 435 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "24.9 ms ± 272 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,15 +266,23 @@
     "    dir_len=dist\n",
     "    norm_vec=[dir_vec[X]/dir_len,dir_vec[Y]/dir_len]\n",
     "    return_const=(1/(4*math.pi*(dist**2)*E0))*TIMESCALE*c_dir\n",
-    "    res=[norm_vec[X]*return_const,norm_vec[Y]*return_const]\n",
-    "    print(res)"
+    "    res[:]=[norm_vec[X]*return_const,norm_vec[Y]*return_const,0]\n",
+    "    #print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.25 µs ± 254 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "test=np.random.random((3,2,100))\n",
     "\n",
@@ -284,26 +292,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "compute_force_guv: Output operand 0 has a mismatch in its core dimension 0, with gufunc signature (n),(n)->(n) (size 2 is different from 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [147], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m test2\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39marray([[[\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m],[\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m]]],dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfloat64\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m res\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mzeros((\u001b[38;5;241m2\u001b[39m))\n\u001b[1;32m----> 3\u001b[0m \u001b[43mcompute_force_guv\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mres\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\bjste\\.conda\\envs\\tf-gpu\\lib\\site-packages\\numba\\np\\ufunc\\gufunc.py:170\u001b[0m, in \u001b[0;36mGUFunc.__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    166\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__call__\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m    167\u001b[0m     \u001b[39m# If compilation is disabled OR it is NOT a dynamic gufunc\u001b[39;00m\n\u001b[0;32m    168\u001b[0m     \u001b[39m# call the underlying gufunc\u001b[39;00m\n\u001b[0;32m    169\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_frozen \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mis_dynamic:\n\u001b[1;32m--> 170\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mufunc(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    171\u001b[0m     \u001b[39melif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mout\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m kwargs:\n\u001b[0;32m    172\u001b[0m         \u001b[39m# If \"out\" argument is supplied\u001b[39;00m\n\u001b[0;32m    173\u001b[0m         args \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m (kwargs\u001b[39m.\u001b[39mpop(\u001b[39m\"\u001b[39m\u001b[39mout\u001b[39m\u001b[39m\"\u001b[39m),)\n",
-      "\u001b[1;31mValueError\u001b[0m: compute_force_guv: Output operand 0 has a mismatch in its core dimension 0, with gufunc signature (n),(n)->(n) (size 2 is different from 3)"
-     ]
+     "data": {
+      "text/plain": [
+       "'(n),(n)->(n)'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_force_guv.ufunc.signature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.02813488, -0.02813488],\n",
+       "       [ 0.02813488,  0.02813488]])"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "test2=np.array([[[1,1,1],[2,2,2]]],dtype=\"float64\")\n",
-    "res=np.zeros((2))\n",
-    "compute_force_guv([1,1,1],[2,2,2],res)"
+    "res=np.zeros((2,3))\n",
+    "def compute_vectors_guv_fixed_output(non_statics,statics):\n",
+    "    return compute_force_guv(non_statics,statics,np.zeros((statics.shape[0],3)))[:2,:2]\n",
+    "\n",
+    "compute_vectors_guv_fixed_output(np.array([[0,0,1],[0,0,1]]),np.array([[1,1,1],[1,1,-1]]))"
    ]
   },
   {
