--- a/main.ipynb
+++ b/main.ipynb
@@ -478,10 +478,23 @@
         "%load_ext line_profiler"
       ],
       "metadata": {
-        "id": "6JajjWRUIf6w"
+        "id": "6JajjWRUIf6w",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b957062e-311c-4f0e-e0f2-afe470be5737"
       },
-      "execution_count": 14,
-      "outputs": []
+      "execution_count": 155,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The line_profiler extension is already loaded. To reload it, use:\n",
+            "  %reload_ext line_profiler\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -814,9 +827,9 @@
       "cell_type": "code",
       "source": [
         "def extract_charges(img,val_img=None):\n",
-        "  img=cv2.cvtColor(img,cv2.COLOR_BGR2HSV)\n",
+        "  img=cv2.cvtColor(img.copy(),cv2.COLOR_BGR2HSV)\n",
         "  if type(val_img)!=type(None):\n",
-        "    valarray=cv2.cv2Color(val_img,cv2.COLOR_BGR2GRAY)\n",
+        "    valarray=cv2.cv2Color(val_img.copy(),cv2.COLOR_BGR2GRAY)\n",
         "  else:\n",
         "    valarray=np.ones(img[:,:,0].shape)\n",
         "   \n",
@@ -840,34 +853,60 @@
         "    charges.append([coords[1],bluemask.shape[0]-coords[0]-1,valarray[coords[0],coords[1]]])\n",
         "  return np.array(charges)\n",
         "  \n",
-        "extract_charges(testimg)"
+        "#%lprun -f extract_charges extract_charges(testimg)"
+      ],
+      "metadata": {
+        "id": "QwytRavNefqc"
+      },
+      "execution_count": 157,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "testimgarray=np.ones((100,200))\n",
+        "cv2_imshow(testimgarray)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 117
         },
-        "id": "QwytRavNefqc",
-        "outputId": "43f54d31-9b4a-4454-d63c-190a76acad77"
+        "id": "fBhhoyAO4caF",
+        "outputId": "25a7dfbc-2f5c-4322-fbf6-5a4122106574"
       },
-      "execution_count": 152,
+      "execution_count": 158,
       "outputs": [
         {
-          "output_type": "execute_result",
+          "output_type": "display_data",
           "data": {
             "text/plain": [
-              "array([[493., 860.,  -1.],\n",
-              "       [494., 860.,  -1.],\n",
-              "       [495., 860.,  -1.],\n",
-              "       ...,\n",
-              "       [803., 523.,   1.],\n",
-              "       [804., 523.,   1.],\n",
-              "       [805., 523.,   1.]])"
-            ]
+              "<PIL.Image.Image image mode=L size=200x100 at 0x7F5090A742D0>"
+            ],
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAMgAAABkCAAAAADm7SDXAAAAiUlEQVR4nO3PAQkAIBDAQN/+oS0heMguwTaz/rBfB9zSiKYRTSOaRjSNaBrRNKJpRNOIphFNI5pGNI1oGtE0omlE04imEU0jmkY0jWga0TSiaUTTiKYRTSOaRjSNaBrRNKJpRNOIphFNI5pGNI1oGtE0omlE04imEU0jmkY0jWga0TSiaUTTiOYASmgAyRPlqugAAAAASUVORK5CYII=\n"
           },
-          "metadata": {},
-          "execution_count": 152
+          "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def distribute_line_charges(img,res_x,res_y=None):\n",
+        "  if type(res_y)==type(None):\n",
+        "    res_y=res_x\n",
+        "  \n",
+        "  x_coords=((np.arange(res_x)+.5)/res_x)*img.shape[1]\n",
+        "  y_coords=((np.arange(res_y)+.5)/res_y)*img.shape[0]\n",
+        "  lines=np.array(np.meshgrid(x_coords,y_coords,(-1,1))).T.reshape(-1,3)\n",
+        "  return lines\n",
+        "%lprun -f distribute_line_charges distribute_line_charges(testimg,10)\n"
+      ],
+      "metadata": {
+        "id": "OWdhF5F504Ea"
+      },
+      "execution_count": 166,
+      "outputs": []
     }
   ],
   "metadata": {
